# Redteam-Automation

./: .gitignore  README.md  config.yaml  pyproject.toml
redteam/: __init__.py  cli.py  config.py
redteam/core/: attack_lifecycle.py  engine.py  event_bus.py  plugin_loader.py
redteam/dashboard/: __init__.py  server.py
redteam/exploit/: __init__.py  brute_force.py  cve_exploits.py  exploit_selector.py  web_exploits.py
redteam/mitre/: __init__.py  attack_map.py  navigator.py
redteam/post_exploit/: __init__.py  credential_harvest.py  lateral_movement.py  persistence.py  priv_escalation.py
redteam/recon/: __init__.py  os_fingerprint.py  port_scanner.py  subdomain_enum.py  vuln_scanner.py  web_recon.py
redteam/reporting/: __init__.py  attack_graph.py  report_generator.py
